--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#f0f0f0</color>
     <color name="purple">#6200EE</color>
     <color name="primary">#6750A4</color>
     <color name="on_primary">#FFFFFF</color>
