--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,16 @@
     <dimen name="corner_radius_medium">16dp</dimen>
     <dimen name="corner_radius_large">24dp</dimen>
     <dimen name="guideline_percent">0.5</dimen>
+    <dimen name="album_art_size">280dp</dimen>
+    <dimen name="icon_size_small">24dp</dimen>
+    <dimen name="icon_size_medium">32dp</dimen>
+    <dimen name="icon_size_large">48dp</dimen>
+    <dimen name="button_size_small">40dp</dimen>
+    <dimen name="button_size_medium">56dp</dimen>
+    <dimen name="button_size_large">72dp</dimen>
+    <dimen name="text_size_tiny">10sp</dimen>
+    <dimen name="text_size_small">12sp</dimen>
+    <dimen name="text_size_medium">14sp</dimen>
+    <dimen name="text_size_large">18sp</dimen>
+    <dimen name="text_size_xlarge">24sp</dimen>
 </resources>
